URL hash setter does not remove fragment identifier if argument is an empty string https://bugs.webkit.org/show_bug.cgi?id=158869 <rdar://problem/26863430>

Reviewed by Darin Adler.

Source/WebCore:

URL hash setter and URLUtils hash setter should remove the fragment identifier
if set to "#" or "":
- https://url.spec.whatwg.org/#dom-url-hash
- https://html.spec.whatwg.org/multipage/semantics.html#dom-hyperlink-hash

This patch aligns our behavior with the specification and with other browsers
(tested Firefox and Chrome).

This patch also updates HTMLAnchorElement to inherit URLUtils to avoid code
duplication. HTMLAnchorElement already implements URLUtils in the IDL, as per
the specification:
- https://html.spec.whatwg.org/multipage/semantics.html#htmlanchorelement

No new tests, rebaselined existing tests.

* html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::origin): Deleted.
(WebCore::HTMLAnchorElement::text): Deleted.
(WebCore::HTMLAnchorElement::setText): Deleted.
(WebCore::HTMLAnchorElement::toString): Deleted.
(WebCore::HTMLAnchorElement::isLiveLink): Deleted.
(WebCore::HTMLAnchorElement::sendPings): Deleted.
(WebCore::HTMLAnchorElement::handleClick): Deleted.
(WebCore::HTMLAnchorElement::eventType): Deleted.
(WebCore::HTMLAnchorElement::treatLinkAsLiveForEventType): Deleted.
(WebCore::isEnterKeyKeydownEvent): Deleted.
(WebCore::shouldProhibitLinks): Deleted.
(WebCore::HTMLAnchorElement::willRespondToMouseClickEvents): Deleted.
(WebCore::rootEditableElementMap): Deleted.
(WebCore::HTMLAnchorElement::rootEditableElementForSelectionOnMouseDown): Deleted.
(WebCore::HTMLAnchorElement::clearRootEditableElementForSelectionOnMouseDown): Deleted.
(WebCore::HTMLAnchorElement::setRootEditableElementForSelectionOnMouseDown): Deleted.
* html/HTMLAnchorElement.h:
(WebCore::HTMLAnchorElement::invalidateCachedVisitedLinkHash): Deleted.
* html/URLUtils.h:
(WebCore::URLUtils<T>::setHash):

LayoutTests:

Update existing layout tests now that setting hash to "" or "#" clears
the fragment identifier.

* fast/dom/DOMURL/set-href-attribute-hash-expected.txt:
* fast/dom/DOMURL/set-href-attribute-hash.html:
* fast/dom/HTMLAnchorElement/script-tests/set-href-attribute-hash.js:
* fast/dom/HTMLAnchorElement/set-href-attribute-hash-expected.txt:


Canonical link: https://commits.webkit.org/176952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202176 268f45cc-cd09-0410-ab3c-d52691b4dbfc